--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="src/assets/stack-of-books.ico" />
+    <link rel="icon" type="image/svg+xml" href="public/stack-of-books.ico" />
     <script src="https://kit.fontawesome.com/6b03521ec2.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gerenciador de Estudos</title>
